cmake_minimum_required(VERSION 3.10.0)

project(MuOnlinux VERSION 0.1.0 LANGUAGES C CXX)

#Headers/Includes (.h/.hpp)
include_directories(${CMAKE_SOURCE_DIR}/source)

#Sources
set(SOURCE_FILES
    #Dotnet
    source/Dotnet/Connection.cpp
    source/Dotnet/PacketFunctions_ChatServer.cpp
    source/Dotnet/PacketFunctions_ClientToServer.cpp
    source/Dotnet/PacketFunctions_ConnectServer.cpp
    source/Dotnet/PacketFunctions_Custom.cpp
    #ExternalObject
    source/ExternalObject/Leaf/xstreambuf.cpp
    #GameShop
    source/GameShop/FileDownloader/DownloadInfo.cpp
    source/GameShop/FileDownloader/FTPConnecter.cpp
    source/GameShop/FileDownloader/FileDownloader.cpp
    source/GameShop/FileDownloader/HTTPConnecter.cpp
    source/GameShop/ShopListManager/interface/PathMethod/Path.cpp
    source/GameShop/ShopListManager/interface/WZResult/WZResult.cpp
    source/GameShop/ShopListManager/BannerInfo.cpp
    source/GameShop/ShopListManager/BannerInfoList.cpp
    source/GameShop/ShopListManager/BannerListManager.cpp
    source/GameShop/ShopListManager/FTPFileDownLoader.cpp
    source/GameShop/ShopListManager/ListManager.cpp
    source/GameShop/ShopListManager/ShopCategory.cpp
    source/GameShop/ShopListManager/ShopCategoryList.cpp
    source/GameShop/ShopListManager/ShopList.cpp
    source/GameShop/ShopListManager/ShopListManager.cpp
    source/GameShop/ShopListManager/ShopPackage.cpp
    source/GameShop/ShopListManager/ShopPackageList.cpp
    source/GameShop/ShopListManager/ShopProduct.cpp
    source/GameShop/ShopListManager/ShopProductList.cpp
    source/GameShop/ShopListManager/StringMethod.cpp
    source/GameShop/ShopListManager/StringToken.cpp
    source/GameShop/InGameShopSystem.cpp
    source/GameShop/MsgBoxIGSBuyConfirm.cpp
    source/GameShop/MsgBoxIGSBuyPackageItem.cpp
    source/GameShop/MsgBoxIGSBuySelectItem.cpp
    source/GameShop/MsgBoxIGSCommon.cpp
    source/GameShop/MsgBoxIGSDeleteItemConfirm.cpp
    source/GameShop/MsgBoxIGSGiftStorageItemInfo.cpp
    source/GameShop/MsgBoxIGSSendGift.cpp
    source/GameShop/MsgBoxIGSSendGiftConfirm.cpp
    source/GameShop/MsgBoxIGSStorageItemInfo.cpp
    source/GameShop/MsgBoxIGSUseBuffConfirm.cpp
    source/GameShop/MsgBoxIGSUseItemConfirm.cpp
    source/GameShop/NewUIInGameShop.cpp
    #Math
    source/Math/ZzzMathLib.cpp
    #MUHelper
    source/MUHelper/MuHelper.cpp
    source/MUHelper/MuHelperData.cpp
    #Time
    source/Time/CTimCheck.cpp
    source/Time/Timer.cpp
    #Utilities
    source/Utilities/Log/ErrorReport.cpp
    source/Utilities/Log/muConsoleDebug.cpp
    source/Utilities/Log/WindowsConsole.cpp
    source/Utilities/CpuUsage.cpp
    #Root
    source/_GlobalFunctions.cpp
    source/BoneManager.cpp
    source/Button.cpp
    source/CameraMove.cpp
    source/CBTMessageBox.cpp
    source/CComGem.cpp
    source/CDirection.cpp
    source/CKANTURUDirection.cpp
    source/ChangeRingManager.cpp
    source/CharInfoBalloon.cpp
    source/CharInfoBalloonMng.cpp
    source/CharMakeWin.cpp
    source/CharSelMainWin.cpp
    source/CharacterManager.cpp
    source/CMVP1stDirection.cpp
    source/CreditWin.cpp
    source/CSChaosCastle.cpp
    source/CSEventMatch.cpp
    source/CSItemOption.cpp
    source/CSMapServer.cpp
    source/CSParts.cpp
    source/CSPetSystem.cpp
    source/CSQuest.cpp
    source/CSWaterTerrain.cpp
    source/DSplaysound.cpp
    source/DSwaveIO.cpp
    source/DuelMgr.cpp
    source/Event.cpp
    source/GambleSystem.cpp
    source/GaugeBar.cpp
    source/GIPetManager.cpp
    source/GlobalBitmap.cpp
    source/GM_Kanturu_2nd.cpp
    source/GM_Kanturu_3rd.cpp
    source/GM_PK_Field.cpp
    source/GM_Raklion.cpp
    source/GM_kanturu_1st.cpp
    source/GM3rdChangeUp.cpp
    source/GMAida.cpp
    source/GMBattleCastle.cpp
    source/GMCryingWolf2nd.cpp
    source/GMCrywolf1st.cpp
    source/GMDoppelGanger1.cpp
    source/GMDoppelGanger2.cpp
    source/GMDoppelGanger3.cpp
    source/GMDoppelGanger4.cpp
    source/GMDuelArena.cpp
    source/GMEmpireGuardian1.cpp
    source/GMEmpireGuardian2.cpp
    source/GMEmpireGuardian3.cpp
    source/GMEmpireGuardian4.cpp
    source/GMHellas.cpp
    source/GMHuntingGround.cpp
    source/GMKarutan1.cpp
    source/GMNewTown.cpp
    source/GMSantaTown.cpp
    source/GMSwampOfQuiet.cpp
    source/GMUnitedMarketPlace.cpp
    source/GOBoid.cpp
    source/GuildCache.cpp
    source/Input.cpp
    source/ItemAddOptioninfo.cpp
    source/ItemManager.cpp
    source/KeyGenerater.cpp
    source/LoadData.cpp
    source/LoadingScene.cpp
    source/Local.cpp
    source/LoginMainWin.cpp
    source/LoginWin.cpp
    source/MapManager.cpp
    source/MatchEvent.cpp
    source/MixMgr.cpp
    source/MonkSystem.cpp
    source/MoveCommandData.cpp
    source/MsgWin.cpp
    source/MultiLanguage.cpp
    source/NewBloodCastleSystem.cpp
    source/NewChaosCastleSystem.cpp
    source/NewUI3DRenderMng.cpp
    source/NewUIBattleSoccerScore.cpp
    source/NewUIBloodCastleEnter.cpp
    source/NewUIBloodCastleTime.cpp
    source/NewUIBuffWindow.cpp
    source/NewUIButton.cpp
    source/NewUICastleWindow.cpp
    source/NewUICatapultWindow.cpp
    source/NewUIChaosCastleTime.cpp
    source/NewUICharacterInfoWindow.cpp
    source/NewUIChatInputBox.cpp
    source/NewUIChatLogWindow.cpp
    source/NewUICommandWindow.cpp
    source/NewUICommon.cpp
    source/NewUICommonMessageBox.cpp
    source/NewUICryWolf.cpp
    source/NewUICursedTempleEnter.cpp
    source/NewUICursedTempleResult.cpp
    source/NewUICursedTempleSystem.cpp
    source/NewUICustomMessageBox.cpp
    source/NewUIDoppelGangerFrame.cpp
    source/NewUIDoppelGangerWindow.cpp
    source/NewUIDuelWatchMainFrameWindow.cpp
    source/NewUIDuelWatchUserListWindow.cpp
    source/NewUIDuelWatchWindow.cpp
    source/NewUIDuelWindow.cpp
    source/NewUIEmpireGuardianNPC.cpp
    source/NewUIEmpireGuardianTimer.cpp
    source/NewUIEnterDevilSquare.cpp
    source/NewUIExchangeLuckyCoin.cpp
    source/NewUIFriendWindow.cpp
    source/NewUIGateSwitchWindow.cpp
    source/NewUIGatemanWindow.cpp
    source/NewUIGensRanking.cpp
    source/NewUIGoldBowmanLena.cpp
    source/NewUIGoldBowmanWindow.cpp
    source/NewUIGroup.cpp
    source/NewUIGuardWindow.cpp
    source/NewUIGuildInfoWindow.cpp
    source/NewUIGuildMakeWindow.cpp
    source/NewUIHelpWindow.cpp
    source/NewUIHeroPositionInfo.cpp
    source/NewUIHotKey.cpp
    source/NewUIInventoryCtrl.cpp
    source/NewUIInventoryExtension.cpp
    source/NewUIItemEnduranceInfo.cpp
    source/NewUIItemExplanationWindow.cpp
    source/NewUIItemMng.cpp
    source/NewUIKanturuEvent.cpp
    source/NewUILuckyItemWnd.cpp
    source/NewUIMainFrameWindow.cpp
    source/NewUIManager.cpp
    source/NewUIMasterLevel.cpp
    source/NewUIMessageBox.cpp
    source/NewUIMiniMap.cpp
    source/NewUIMixInventory.cpp
    source/NewUIMoveCommandWindow.cpp
    source/NewUIMuHelper.cpp
    source/NewUIMyInventory.cpp
    source/NewUIMyQuestInfoWindow.cpp
    source/NewUIMyShopInventory.cpp
    source/NewUINPCDialogue.cpp
    source/NewUINPCQuest.cpp
    source/NewUINPCShop.cpp
    source/NewUINameWindow.cpp
    source/NewUIOptionWindow.cpp
    source/NewUIPartyInfoWindow.cpp
    source/NewUIPartyListWindow.cpp
    source/NewUIPetInfoWindow.cpp
    source/NewUIPurchaseShopInventory.cpp
    source/NewUIQuestProgress.cpp
    source/NewUIQuestProgressByEtc.cpp
    source/NewUIQuickCommandWindow.cpp
    source/NewUIRegistrationLuckyCoin.cpp
    source/NewUIRenderNumber.cpp
    source/NewUIScrollBar.cpp
    source/NewUISeigeWarfare.cpp
    source/NewUISetItemExplanation.cpp
    source/NewUISiegeWarBase.cpp
    source/NewUISiegeWarCommander.cpp
    source/NewUISiegeWarObserver.cpp
    source/NewUISiegeWarSoldier.cpp
    source/NewUISlideWindow.cpp
    source/NewUIStorageInventory.cpp
    source/NewUIStorageInventoryExt.cpp
    source/NewUISystem.cpp
    source/NewUITextBox.cpp
    source/NewUITrade.cpp
    source/NewUIUnitedMarketPlaceWindow.cpp
    source/NewUIWindowMenu.cpp
    source/npcBreeder.cpp
    source/npcCatapult.cpp
    source/npcGateSwitch.cpp
    source/Observer.cpp
    source/OptionWin.cpp
    source/PartyManager.cpp
    source/PersonalShopTitleImp.cpp
    source/PhysicsManager.cpp
    source/PList.cpp
    source/PortalMgr.cpp
    source/QuestMng.cpp
    source/ServerGroup.cpp
    source/ServerInfo.cpp
    source/ServerListManager.cpp
    source/ServerMsgWin.cpp
    source/ServerSelWin.cpp
    source/ShadowVolume.cpp
    source/SideHair.cpp
    source/SkillEffectMgr.cpp
    source/SkillManager.cpp
    source/Slider.cpp
    source/SMD.cpp
    source/SMD2BMD.cpp
    source/SocketSystem.cpp
    source/Sprite.cpp
    source/StdAfx.cpp
    source/SummonSystem.cpp
    source/SysMenuWin.cpp
    source/TextureScript.cpp
    source/UIControls.cpp
    source/UIDefaultBase.cpp
    source/UIGateKeeper.cpp
    source/UIGuardsMan.cpp
    source/UIGuildInfo.cpp
    source/UIGuildMaster.cpp
    source/UIJewelHarmony.cpp
    source/UIManager.cpp
    source/UIMapName.cpp
    source/UIMng.cpp
    source/UIPopup.cpp
    source/UISenatus.cpp
    source/UIWindows.cpp
    source/UsefulDef.cpp
    source/w_BasePet.cpp
    source/w_Buff.cpp
    source/w_BuffScriptLoader.cpp
    source/w_BuffStateSystem.cpp
    source/w_BuffStateValueControl.cpp
    source/w_BuffTimeControl.cpp
    source/w_CharacterInfo.cpp
    source/w_CursedTemple.cpp
    source/w_MapProcess.cpp
    source/w_ObjectInfo.cpp
    source/w_PetActionCollecter.cpp
    source/w_PetActionCollecter_Add.cpp
    source/w_PetActionDemon.cpp
    source/w_PetActionRound.cpp
    source/w_PetActionStand.cpp
    source/w_PetActionUnicorn.cpp
    source/w_PetProcess.cpp
    source/WSclient.cpp
    source/Win.cpp
    source/WinEx.cpp
    source/Winmain.cpp
    source/ZzzAI.cpp
    source/ZzzBMD.cpp
    source/ZzzCharacter.cpp
    source/ZzzEffect.cpp
    source/ZzzEffectBlurSpark.cpp
    source/ZzzEffectFireLeave.cpp
    source/ZzzEffectJoint.cpp
    source/ZzzEffectMagicSkill.cpp
    source/ZzzEffectParticle.cpp
    source/ZzzEffectPoint.cpp
    source/ZzzEffectPointer.cpp
    source/zzzeffectsprite.cpp
    source/ZzzInfomation.cpp
    source/ZzzInterface.cpp
    source/ZzzInventory.cpp
    source/ZzzLodTerrain.cpp
    source/ZzzObject.cpp
    source/ZzzOpenData.cpp
    source/ZzzOpenglUtil.cpp
    source/zzzpath.cpp
    source/ZzzScene.cpp
    source/ZzzTexture.cpp
)

add_executable(muonlinux ${SOURCE_FILES})